FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Account, auto populate when Opp Won. This gives a. related list on the  Account this Product is/has been Sold to.</description>
    <inlineHelpText>Account this Product has been Sold to.(auto Populated)</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product(s) on Won Opps</relationshipLabel>
    <relationshipName>Opportunity_Product_Won</relationshipName>
    <type>Lookup</type>
</CustomField>