FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Twins from Subscription on amend and renew</description>
    <inlineHelpText>Account Country for the Ship To Account on this Opp Product</inlineHelpText>
    <label>Account Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Country</valueSetName>
    </valueSet>
</CustomField>