FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>Used for Travel Rev Calculator. Shows Account Industry</description>
    <formula>Text(Ship_To_Account__r.Account_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows Account Industry</inlineHelpText>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>