FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Account_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership_Type__c</fullName>
    <formula>TEXT(Opportunity.Ship_To_Account__r.Ownership_Type__c)</formula>
    <label>Account Ownership Type</label>
    <type>Text</type>
</CustomField>