FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Account_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry__c</fullName>
    <formula>TEXT(Ship_To_Account__r.Account_Sub_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sub Industry</label>
    <type>Text</type>
</CustomField>