FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Adjusted_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Rate_Amount__c</fullName>
    <description>Used for Legal Approval Document</description>
    <label>Adjusted Rate (Amt)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>