FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Adjusted_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Rate_Percent__c</fullName>
    <description>Test field for mapping to Legal Document</description>
    <label>Adjusted Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>