FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Adjusted_Total__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total__c</fullName>
    <formula>IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Cross Border&quot;), (( TotalPrice )/3)*(50/100), TotalPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>