FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Adjusted_Total_Text__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_Text__c</fullName>
    <description>Total from the Adjusted Total formula field, filled in via workflow.</description>
    <inlineHelpText>Total from the Adjusted Total formula field, filled in via workflow.</inlineHelpText>
    <label>Adjusted Total Text</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>