FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Code__c</fullName>
    <description>Stamped from Usage Rates - Attributes lookup object via price rule. This code identifies the unique combination of attributes that drive the usage rate pricing and is sent to analytics and NetSuite</description>
    <inlineHelpText>Attribute code for the combination of Quote Line variables</inlineHelpText>
    <label>Attribute Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>