FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Auto_Opp_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Auto_Opp_Line_Id__c</fullName>
    <description>Created from JIRA ticket: BOPI-179, Updated as per Jira ticket: BOPI-422
Updated format per BOPI-655</description>
    <displayFormat>N{0}</displayFormat>
    <label>Auto Opp Line Id</label>
    <type>AutoNumber</type>
</CustomField>