FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Baseline_ARR__c.field-meta.xml
<CustomField>
    <fullName>Baseline_ARR__c</fullName>
    <description>When a product comes from a renewed quote line we fill this field with the original ARR</description>
    <inlineHelpText>Original Opportunity Product ARR</inlineHelpText>
    <label>Baseline ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>