FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Created for BOPI-328</description>
    <formula>SBQQ__QuoteLine__r.Billing_Frequency_email__c</formula>
    <inlineHelpText>Used for Legal Template for Approval Rule</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>