FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Commissions_Net_ARR__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Net_ARR__c</fullName>
    <description>BOPI-589 was created to replace the Net_ARR field, which has been deprecated due to its datatype being set as Currency. The new field needs to be of the Number datatype. This field is used to calculate commissions on specific products where the ARR differs from the Net Revenue.</description>
    <inlineHelpText>This field is used to calculate commissions on specific products where the ARR differs from the Net Revenue.</inlineHelpText>
    <label>Opp Product Net ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>