FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Do_not_Auto_Calculate_Price__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Auto_Calculate_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when you need to manually change Sale Price and do not want the XB Rev Cal workflow to override it.</description>
    <inlineHelpText>Check when you need to manually change Sale Price and do not want the XB Rev Cal workflow to override it.</inlineHelpText>
    <label>Do not Auto Calculate Price</label>
    <type>Checkbox</type>
</CustomField>