FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Est_Annual_MM__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_MM__c</fullName>
    <description>Full Estimated Annual Money Moved expected. Used to calculate against spread to come up with the final Sales Price to be used on the Opp and aggregated in Amount field. Part of Travel Rev calculator automation.</description>
    <inlineHelpText>Full Estimated Annual Money Moved expected. Used to calculate against spread to come up with the final Sales Price to be used on the Opp and aggregated in Amount field.</inlineHelpText>
    <label>Est Annual MM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>