FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/External_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Description__c</fullName>
    <description>BOPI-684 Twinned from the Quote Line. This description appears on the generated Quote Document, Build Request Document, Opportunity Approval Email, and is sent to NetSuite</description>
    <inlineHelpText>This description appears on the generated Quote Document, Build Request Document, Opportunity Approval Email, and is sent to NetSuite</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>