FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Display Product Family on the Opp Line Item for easier reporting.</description>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Product Family on the Opp Line Item for easier reporting.</inlineHelpText>
    <label>Family</label>
    <type>Text</type>
</CustomField>