FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Is_Modified__c.field-meta.xml
<CustomField>
    <fullName>Is_Modified__c</fullName>
    <formula>IF( CreatedDate = LastModifiedDate ,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>