FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Is_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Closed__c</fullName>
    <description>This field saves us an extra Get Record element on the (ACC) ARR Recalculation flow.</description>
    <formula>Opportunity.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Opportunity Closed</label>
    <type>Checkbox</type>
</CustomField>