FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/IsTotalPrice_0__c.field-meta.xml
<CustomField>
    <fullName>IsTotalPrice_0__c</fullName>
    <description>Created for BOPI-79</description>
    <formula>IF( TotalPrice &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for a formula in DataRaptor to determine if Net Price or Usage prices should be shown.</inlineHelpText>
    <label>IsTotalPrice&gt;0</label>
    <type>Checkbox</type>
</CustomField>