FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Net_ARR__c.field-meta.xml
<CustomField>
    <fullName>Net_ARR__c</fullName>
    <description>This number reflects the difference between the original Opportunity Product Line ARR and the renewal actual last 12 months ARR
BOPI-589 relabeled to better describe the purpose of the field</description>
    <formula>Opp_Product_ARR__c - Baseline_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This number reflects the difference between the original Opportunity Product Line ARR and the renewal actual last 12 months ARR</inlineHelpText>
    <label>Renewal Net ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>