FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <description>Net Price for Calculating the correct Commissions for this product.Req. from Tom Metcalf Edu.</description>
    <inlineHelpText>Net Price for Calculating the correct Commissions for this product.</inlineHelpText>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>