FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/No_PC_RQd__c.field-meta.xml
<CustomField>
    <fullName>No_PC_RQd__c</fullName>
    <description>This formula field copying data from Product Object is used in the Auto Creation of Prod Config records Flow.</description>
    <formula>PricebookEntry.Product2.No_PC_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula field copying data from Product Object is used in the Auto Creation of Prod Config records Flow.</inlineHelpText>
    <label>No PC RQd</label>
    <type>Checkbox</type>
</CustomField>