FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Opp_Product_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_ARR__c</fullName>
    <description>Created from JIRA ticket: BOPI-304.</description>
    <inlineHelpText>Auto-calculated ARR for line item</inlineHelpText>
    <label>Opp Product ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>