FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/OppLineItemID__c.field-meta.xml
<CustomField>
    <fullName>OppLineItemID__c</fullName>
    <description>Admin field -Copy of the Opportunity Line Item (Product on Opp) ID for use in reports, exports, uploads, etc</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin field -Copy of the Opportunity Line Item (Product on Opp) ID for use in reports, exports, uploads, etc</inlineHelpText>
    <label>OppLineItemID</label>
    <type>Text</type>
</CustomField>