FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Id__c</fullName>
    <description>Created from JIRA ticket: BOPI-179. This field is filled in by an automation which copies the &apos;Auto Opp Line ID&apos; to this field. On renewals this field is ovewritten by the original Opp Line ID.</description>
    <inlineHelpText>The Unique Opportunity Product ID used by Implementation and Finance. Number is entered in Platform when onboarding. Referred to as SOLID by some.</inlineHelpText>
    <label>Opp Line Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>