FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/OppProd_Old_ID__c.field-meta.xml
<CustomField>
    <fullName>OppProd_Old_ID__c</fullName>
    <description>ID in previous Salesforce system or Simplee SF</description>
    <externalId>true</externalId>
    <label>OppProd Old ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>