FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Partner Account to indicate when a product is linked to a partner. Example: reselling partner product, partner is reselling Flywire product. Partner referral fees, etc.</description>
    <inlineHelpText>Link to Partner Account to indicate when a product is linked to a partner. Example: reselling partner product, partner is reselling Flywire product. Partner referral fees, etc.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Product (Partner Account)</relationshipLabel>
    <relationshipName>Opportunity_PartnerProduct</relationshipName>
    <type>Lookup</type>
</CustomField>