FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner. Twinned from Quote Line BOPI-512</description>
    <inlineHelpText>Choose the type of Partnership this Opportunity has with the Partner, listed in &quot;Partner&quot; field.</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Type</valueSetName>
    </valueSet>
</CustomField>