FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Twins from Subscription on amend and renew</description>
    <inlineHelpText>Payment Method for this Opp Product</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Method</valueSetName>
    </valueSet>
</CustomField>