FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>BOPI-460 This is a twinned field from the Quote Line, it is used on the Opportunity Advanced Approval email templates to show a single column with a price regardless of the product Rate Type and Usage Type</description>
    <inlineHelpText>Will show the usage rate if the product rate type is usage based or a price amount if the product rate type is fixed</inlineHelpText>
    <label>Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>