FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/PricebookEntryID__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryID__c</fullName>
    <description>Admin field - Copy of Opps pricebook Entry ID to be used in reports for export, uploads, etc.</description>
    <formula>PricebookEntryId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin field - Copy of Opps pricebook Entry ID to be used in reports for export, uploads, etc.</inlineHelpText>
    <label>PricebookEntryID</label>
    <type>Text</type>
</CustomField>