FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Product_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Live_Date__c</fullName>
    <label>Product Live Date</label>
    <type>Date</type>
</CustomField>