FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Product_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Copy__c</fullName>
    <description>Copy Product Name from Lookup&gt; Price Book&gt; Product Name for use in Automations
BOPI-460 changing label to display as a column in email approvals</description>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy Product Name from Lookup&gt; Price Book&gt; Product Name for use in Automations</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>