FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Quote_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Type__c</fullName>
    <description>The value of this field will indicate if the ARR should be calculated. This field is twinned from the Quote Line</description>
    <inlineHelpText>Auto calculated field based to indicate if this product should generate ARR</inlineHelpText>
    <label>Quote Line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>