FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Refer_Resell_Partner__c.field-meta.xml
<CustomField>
    <fullName>Refer_Resell_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner. Twinned from Quote Line BOPI-512</description>
    <inlineHelpText>Choose the type of Partnership this Opportunity has with the Partner, listed in &quot;Partner&quot; field.</inlineHelpText>
    <label>Refer/Resell Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Product (Refer/Resell Partner)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>