FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-340.</description>
    <inlineHelpText>Used for an Approval rule to determine if the Opportunity Product is a Rev Share product</inlineHelpText>
    <label>Rev Share</label>
    <type>Checkbox</type>
</CustomField>