FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Calculated__c</fullName>
    <description>Filled in by: Process Builder - Edu XB Revenue Calculator</description>
    <inlineHelpText>Filled in by: Process Builder - Edu XB Revenue Calculator</inlineHelpText>
    <label>Revenue Calculated</label>
    <length>150</length>
    <type>Text</type>
</CustomField>