FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Separate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Separate_Entity__c</fullName>
    <description>Created from JIRA ticket: BOPI-344.</description>
    <formula>TEXT( Ship_To_Account__r.Separate_Legal_Entity_Tax_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Separate Entity</label>
    <type>Text</type>
</CustomField>