FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Product (Ship To Account)</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>