FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Ship_To_Account_background__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account_background__c</fullName>
    <formula>Ship_To_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Account background</label>
    <type>Text</type>
</CustomField>