FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <displayFormat>T-{0000}</displayFormat>
    <label>test</label>
    <type>AutoNumber</type>
</CustomField>