FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <description>Created for BOPI-309</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__TotalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to pull the Total Discount (%) from Quote Line to Opp Product</inlineHelpText>
    <label>Total Discount (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>