FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Total_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Rate__c</fullName>
    <description>Created for BOPI-309</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__TotalDiscountRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to pull the Total Discount (%) from Quote Line to Opp Product</inlineHelpText>
    <label>Total Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>