FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Total_Net_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_ARR__c</fullName>
    <description>Total Net ARR</description>
    <formula>IF(Commissions_Net_ARR__c &lt; 0,  0 , 
IF(Commissions_Net_ARR__c &gt; 0 ,Commissions_Net_ARR__c, Opp_Product_ARR__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>