FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Trigger_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Calculation__c</fullName>
    <description>Process Builder Sets date timestamp when Account Industry, Sub Industry, Revenue Region, Account Region or No Int Students change so Auto calculation is triggered by the Opp product change.</description>
    <inlineHelpText>Process Builder Sets date timestamp when Account Industry, Sub Industry, Revenue Region, Account Region or No Int Students change so Auto calculation is triggered by the Opp product change.</inlineHelpText>
    <label>Trigger Calculation</label>
    <type>DateTime</type>
</CustomField>