FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Unique_Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Unique_Opp_Product__c</fullName>
    <description>To report on unique product on Opp for reporting by summarizing by this field. (power of one)</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To report on unique product on Opp for reporting by summarizing by this field. (power of one)</inlineHelpText>
    <label>Unique Opp Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>