FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <description>Used for Legal Document Generation on Opportunity</description>
    <label>Usage Rate %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>