FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Usage_Rate_Amt__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate_Amt__c</fullName>
    <description>Used for Legal Document Generation on Opportunity</description>
    <label>Usage Rate Amt</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>