FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Usage_Rate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate_Discount__c</fullName>
    <formula>IF(NOT(ISBLANK(Adjusted_Rate_Percent__c)), (1-(Adjusted_Rate_Percent__c / Usage_Rate__c)), (1-(Adjusted_Rate_Amount__c / Usage_Rate_Amt__c)))</formula>
    <label>Usage Rate Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>