FLY wire David/force-app/main/default/objects/OpportunityLineItem/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <description>SAL-2143 Used for B2B ARR Automation for Cross Border - Commercial
Select the % Expected for Year 1 Utilization.</description>
    <inlineHelpText>Select the % Expected for Year 1 Utilization.</inlineHelpText>
    <label>% Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20%</fullName>
                <default>true</default>
                <label>20%</label>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>