FLY wire David/force-app/main/default/objects/OpportunityLineItem/validationRules/ARR_Req_Country_Payables.validationRule-meta.xml
<ValidationRule>
    <fullName>ARR_Req_Country_Payables</fullName>
    <active>false</active>
    <description>Check calculation required fields to add product</description>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    Family__c = &apos;Payables&apos;,
    ISBLANK(Opportunity.Account.ShippingCountry)
)</errorConditionFormula>
    <errorMessage>The Account &apos;Shipping Country&apos; must be filled to calculate the ARR</errorMessage>
</ValidationRule>