FLY wire David/force-app/main/default/objects/OpportunityLineItem/validationRules/ARR_ReqField_Travel.validationRule-meta.xml
<ValidationRule>
    <fullName>ARR_ReqField_Travel</fullName>
    <active>false</active>
    <description>Require Country/Industry on Travel Opps when adding XB products</description>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    Opportunity.RecordType.DeveloperName = &apos;Travel&apos;,
    Family__c = &apos;Cross Border&apos;,
    OR (
        ISBLANK(Opportunity.Account.ShippingCountry),
        ISBLANK(TEXT(Opportunity.Account.Account_Industry__c)),
        AND(
            ISPICKVAL(Opportunity.Account.Account_Industry__c,&apos;Accommodations&apos;),
            ISBLANK(TEXT(Opportunity.Account.Account_Sub_Industry__c))
        )
    )
)</errorConditionFormula>
    <errorMessage>The following fields on the Account are required to add Products:
 Shipping Country,
 Account Industry,
 Account Sub Industry, if Accomodations.</errorMessage>
</ValidationRule>